Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-745

table_id is not set in tablet metadata

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Public beta
    • 0.10.0
    • tablet
    • None

    Description

      TabletMetadata has a table_id field, but it doesn't appear to be passed in in the constructor. We should plumb this through, and then add it to the metric entity attributes for the tablet. This is important for heirarchical metric rollup.

      Attachments

        Activity

          People

            wdberkeley William Berkeley
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: