KUDU-745 / KUDU-1463 tablet's table id attribute is empty string

This fixes the issue where the table_id attribute of a tablet
in /metrics was an empty string.

As part of this patch, I also ended up picking a couple of magic
table_id's. The significant one is that the table_id of sys.catalog
is "sys.catalog.id".

Change-Id: I1795a176312f6c2a55c34b7b684ee408f1cf8732
Reviewed-on: http://gerrit.cloudera.org:8080/3183
Tested-by: Kudu Jenkins
Reviewed-by: Todd Lipcon <todd@apache.org>