src/kudu/tserver/tablet_server-test.cc
@@ -192,6 +192,7 @@ TEST_F(TabletServerTest, TestWebPages) {
 
     // Check entity attributes.
     ASSERT_STR_CONTAINS(buf.ToString(), "\"table_name\": \"TestTable\"");
+    ASSERT_STR_CONTAINS(buf.ToString(), "\"table_id\": \"TestTable\"");
 
     // Check for the existence of some particular metrics for which we've had early-retirement
     // bugs in the past.
